--- a/index.html
+++ b/index.html
@@ -226,6 +226,11 @@
                   <option value="houseB">Edelhof</option>
                 </select>
               </div>
+
+              <div>
+                <div class="label">Search name</div>
+                <input class="input" id="filterName" placeholder="Type a name" />
+              </div>
             </div>
 
             <table class="table" id="checkInLearnersTable">
